<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.vito.myapplication.MainActivity">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">


            </LinearLayout>

            <TextView
                android:id="@+id/InputTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/InputTextView" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphInput"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <TextView
                android:id="@+id/AmplTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/AmplTextView" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphAmpl"
                android:layout_width="match_parent"
                android:layout_height="200dip" />

            <TextView
                android:id="@+id/FreqTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/FreqTextView" />

            <com.jjoe64.graphview.GraphView
                android:id="@+id/graphFreq"
                android:layout_width="match_parent"
                android:layout_height="200dip" />


        </LinearLayout>
    </RelativeLayout>
</ScrollView>